# iol-client

./: .gitignore  Pipfile  pyproject.toml  requirements.txt
IOLClient/: client.py
iol_client/: __init__.py  client.py
src/api/: client.py  constants.py  ordenes.py  token.py  token_manager.py  utils.py
test/: bonos_test.py  test_env.py  test_historico.py  test_inversor_test.py  test_iol_decoder_hook.py  token_test.py
uses_case/: bonos.ipynb
